--- a/udemy-project/package.json
+++ b/udemy-project/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~9.1.0-next.1",
     "@angular/router": "~9.1.0-next.1",
     "@ngrx/effects": "^8.6.0",
+    "@ngrx/router-store": "^8.6.0",
     "@ngrx/store": "^8.6.0",
     "bootstrap": "^3.4.1",
     "rxjs": "~6.5.4",
@@ -31,6 +32,7 @@
     "@angular/cli": "~9.1.0-next.0",
     "@angular/compiler-cli": "~9.1.0-next.1",
     "@angular/language-service": "~9.1.0-next.1",
+    "@ngrx/store-devtools": "^8.6.0",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
