--- a/udemy-project/package.json
+++ b/udemy-project/package.json
@@ -7,7 +7,11 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "dev:ssr": "ng run udemy-project:serve-ssr",
+    "serve:ssr": "node dist/udemy-project/server/main.js",
+    "build:ssr": "ng build --prod && ng run udemy-project:server:production",
+    "prerender": "ng run udemy-project:prerender"
   },
   "private": true,
   "dependencies": {
@@ -18,11 +22,16 @@
     "@angular/forms": "~9.1.0-next.1",
     "@angular/platform-browser": "~9.1.0-next.1",
     "@angular/platform-browser-dynamic": "~9.1.0-next.1",
+    "@angular/platform-server": "~9.1.0-next.1",
     "@angular/router": "~9.1.0-next.1",
+    "@nestjs/ng-universal": "^3.0.1",
     "@ngrx/effects": "^8.6.0",
     "@ngrx/router-store": "^8.6.0",
     "@ngrx/store": "^8.6.0",
+    "@nguniversal/express-engine": "^9.0.1",
+    "@nguniversal/module-map-ngfactory-loader": "^8.2.6",
     "bootstrap": "^3.4.1",
+    "express": "^4.15.2",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
@@ -33,6 +42,8 @@
     "@angular/compiler-cli": "~9.1.0-next.1",
     "@angular/language-service": "~9.1.0-next.1",
     "@ngrx/store-devtools": "^8.6.0",
+    "@nguniversal/builders": "^9.0.1",
+    "@types/express": "^4.17.0",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
